; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/bnxt_re/extr_main.c_bnxt_re_setup_chip_ctx.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/bnxt_re/extr_main.c_bnxt_re_setup_chip_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnxt_re_dev = type { %struct.TYPE_5__, %struct.TYPE_4__, %struct.TYPE_6__, %struct.bnxt_en_dev* }
%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_4__ = type { %struct.TYPE_5__* }
%struct.TYPE_6__ = type { i32 }
%struct.bnxt_en_dev = type { i32 }
%struct.bnxt = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnxt_re_dev*)* @bnxt_re_setup_chip_ctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnxt_re_setup_chip_ctx(%struct.bnxt_re_dev* %0) #0 {
  %2 = alloca %struct.bnxt_re_dev*, align 8
  %3 = alloca %struct.bnxt_en_dev*, align 8
  %4 = alloca %struct.bnxt*, align 8
  store %struct.bnxt_re_dev* %0, %struct.bnxt_re_dev** %2, align 8
  %5 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %6 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %5, i32 0, i32 3
  %7 = load %struct.bnxt_en_dev*, %struct.bnxt_en_dev** %6, align 8
  store %struct.bnxt_en_dev* %7, %struct.bnxt_en_dev** %3, align 8
  %8 = load %struct.bnxt_en_dev*, %struct.bnxt_en_dev** %3, align 8
  %9 = getelementptr inbounds %struct.bnxt_en_dev, %struct.bnxt_en_dev* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.bnxt* @netdev_priv(i32 %10)
  store %struct.bnxt* %11, %struct.bnxt** %4, align 8
  %12 = load %struct.bnxt*, %struct.bnxt** %4, align 8
  %13 = getelementptr inbounds %struct.bnxt, %struct.bnxt* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %16 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %15, i32 0, i32 2
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  store i32 %14, i32* %17, align 8
  %18 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %19 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %18, i32 0, i32 2
  %20 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %21 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  store %struct.TYPE_6__* %19, %struct.TYPE_6__** %22, align 8
  %23 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %24 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %23, i32 0, i32 0
  %25 = load %struct.bnxt_re_dev*, %struct.bnxt_re_dev** %2, align 8
  %26 = getelementptr inbounds %struct.bnxt_re_dev, %struct.bnxt_re_dev* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  store %struct.TYPE_5__* %24, %struct.TYPE_5__** %27, align 8
  ret i32 0
}

declare dso_local %struct.bnxt* @netdev_priv(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
